--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
                     <li class="content__list-item">
                         <a href="lesson 23/index.html">Урок 23</a>
                     </li>
+                     <li class="content__list-item">
+                        <a href="lesson28/index.html">Урок 28</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
