--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <a href="lesson 23/index.html">Урок 23</a>
                     </li>
                      <li class="content__list-item">
-                        <a href="home work 28/index.html">Урок 28</a>
+                        <a href="home work 28/lesson28.html">Урок 28</a>
                     </li>
                 </ul>
             </div>
