--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
                      <li class="content__list-item">
                         <a href="home work 28/lesson28.html">Урок 28</a>
                     </li>
+                     <li class="content__list-item">
+                        <a href="lesson 29/index.html">Урок 28</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
