--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         <a href="home work 28/lesson28.html">Урок 28</a>
                     </li>
                      <li class="content__list-item">
-                        <a href="lesson 29/index.html">Урок 29</a>
+                        <a href="lesson 29/index(2).html">Урок 29</a>
                     </li>
                 </ul>
             </div>
