--- a/index.html
+++ b/index.html
@@ -104,6 +104,12 @@
                      <li class="content__list-item">
                         <a href="lesson36/index.html">Урок 36</a>
                     </li>
+                     <li class="content__list-item">
+                        <a href="lesson 38/index.html">Урок 38</a>
+                    </li>
+                     <li class="content__list-item">
+                        <a href="lesson 43/index.html">Урок 43</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
