--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
                 <div class="content__title">Домашние задания</div>
                 <ul class="content__list">
                     <li class="content__list-item">
+                        <a href="lesson 10/index.html">Урок 10</a>
+                    </li>
+                    <li class="content__list-item">
                         <a href="lesson 23/index.html">Урок 23</a>
                     </li>
                      <li class="content__list-item">
