--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
                         <a href="lesson10/index.html">Урок 10</a>
                     </li>
                     <li class="content__list-item">
+                        <a href="lesson22/index.html">Урок 22</a>
+                    </li>
+                    <li class="content__list-item">
                         <a href="lesson 23/index.html">Урок 23</a>
                     </li>
                      <li class="content__list-item">
