--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
                         <a href="lesson 29/index.html">Урок 29</a>
                     </li>
                      <li class="content__list-item">
+                        <a href="lesson33/index.html">Урок 33</a>
+                    </li>
+                     <li class="content__list-item">
                         <a href="lesson36/index.html">Урок 36</a>
                     </li>
                      <li class="content__list-item">
