--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
                      <li class="content__list-item">
                         <a href="lesson 43/index.html">Урок 43</a>
                     </li>
+                     <li class="content__list-item">
+                        <a href="lesson44/index.html">Урок 44</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
