--- a/lesson54/index.html
+++ b/lesson54/index.html
@@ -9,8 +9,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="../style/reset.css">
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="style/reset.css">
+    <link rel="stylesheet" href="style/style.css">
     <title>lesson54</title>
 </head>
 
@@ -18,7 +18,7 @@
     <header>
         <div class="container">
             <div class="header_inner">
-                <img src="../img/logo.png" alt="логотип">
+                <img src="img/logo.png" alt="логотип">
                 <nav class="header_nav">
                     <ul class="header_list">
                         <li class="header_item">
@@ -112,7 +112,7 @@
             <div class="container">
                 <div class="footer_inner">
                     <div class="footer_wrap">
-                        <img class="footer_img" src="../img/logo.png" alt="#">
+                        <img class="footer_img" src="img/logo.png" alt="#">
                         <p class="footer_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                             tempor incididunt ut labore et dolore magna aliqua.
                         </p>
